# APL

./: .travis.yml  README.md  appveyor.yml  travis.yml
Deque/: README.md  deque.h
Lab1/: CMakeLists.txt
Lab1/examples/: main.cpp
Lab1/include/: print_hello_world.h
Lab1/sources/: print_hello_world.cpp
Lab2/: CMakeLists.txt
Lab2/examples/: main.cpp
Lab2/include/: prime_check.h
Lab2/sources/: prime_check.cpp
Lab2/tests/: main.cpp  my_test.cpp
Lab3/: deque.h  myConf
Lab3/html/: annotated.html  class_deque.html  class_node.html  classdeque-members.html  classdeque.html  classdeque__base-members.html  classdeque__base.html  classes.html  deque_8h.html  deque_8h_source.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  structdeque__iterator-members.html  structdeque__iterator.html  structnode-members.html  structnode.html
Lab3/html/search/: all_0.js  all_1.js  all_3.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js
Lab3/latex/: annotated.tex  class_deque.tex  class_node.tex  classdeque.eps  classdeque.tex  classdeque__base.eps  classdeque__base.tex  deque_8h.tex  files.tex  hierarchy.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  structdeque__iterator.tex  structnode.tex
Lab4/: README.md  list.h
